debridmediamanager/ingressroute-debridmediamanager.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: debridmediamanager.${dns_domain}
  namespace: debridmediamanager
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`debridmediamanager.${dns_domain}`)
      kind: Rule
      services:
        - name: debridmediamanager
          kind: Service
          port: 3000
      middlewares:  
        - name: error-pages
          namespace: traefik
